# pslXserver

./: .hello.c.swm  .hello.c.swn  .hello.c.swo  .hello.c.swp  .test.c.swp  .test.py.swp  Cargo.toml  DESIGN.md  Dockerfile.devbox  INSTRUCTIONS.md  KNOWLEDGE.md  PLAN.md  SKILLS.md  SKILLmd  XTerm2026-03-13.12:46:18  build.rs  pslx_proxy.py  run_app.sh  start-ipad-chrome.sh  start-mac-chrome.sh  stop-ipad-chrome.sh  stop-mac-chrome.sh  test.c  test_bs_cjk.py  test_cg_drag  test_cg_drag.c  test_chrome_init.py  test_debug_google_gemini.py  test_drag  test_drag.c  test_drag2  test_drag2.c  test_gemini_buttons.py  test_google_buttons.py  test_ime.py  test_inline_ime.py  test_ios_sim.py  test_kanji.py  test_keyboard.py  test_macos_resize.c  (+16 more)
Xerver.app/Contents/: Info.plist
Xserver.app/Contents/: Info.plist
Xserver.app/Contents/Resources/: AppIcon.icns
ios-app/: BUILD.md
ios-app/Xerver-iOS/: Cargo.toml  Info.plist
ios-app/Xerver-iOS/src/: lib.rs
ios-app/Xserver-iOS/: Cargo.toml  Info.plist  Xserver-iOS-Bridging-Header.h  main.swift
ios-app/Xserver-iOS.xcodeproj/: project.pbxproj
ios-app/Xserver-iOS/src/: lib.rs
ios-app/pslXserver-iOS/: Cargo.toml  Info.plist  main.swift
ios-app/pslXserver-iOS.xcodeproj/: project.pbxproj
ios-app/pslXserver-iOS/src/: lib.rs
pslXserver.app/Contents/: Info.plist
pslXserver.app/Contents/MacOS/: pslXserver
scripts/: run_9955wx_selenium_xtest_smoke.sh  start-with-audio.sh
src/: audio.rs  lib.rs  main.rs
src/clipboard/: mod.rs
src/cursor/: mod.rs
src/display/: hidpi.rs  ios.rs  macos.rs  mod.rs  renderer.rs
src/font/: coretext.rs  mod.rs  xlfd.rs
src/input/: ime.rs  keyboard.rs  mod.rs  mouse.rs
src/server/: atoms.rs  connection.rs  events.rs  mod.rs  protocol.rs  resources.rs  xim.rs
src/server/extensions/: mod.rs  randr.rs  render.rs  shape.rs  xfixes.rs  xinput2.rs  xkb.rs  xtest.rs
src/util/: coord.rs
src/wm/: mod.rs  rootless.rs
