[package]
name = "pslxserver-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "pslxserver"
crate-type = ["staticlib"]

[dependencies]
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
dashmap = "6"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time", "signal"] }

# Re-use the main Xerver crate
Xerver = { path = "../.." }
